add post manage and post view endpoints with service and repository layers + add new models for new updates + new fields in swagger + add new errors and consts for new updates
